Button position and alignment fixed

--- a/DuurzaamHuis/assets/styles/style.css
+++ b/DuurzaamHuis/assets/styles/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 #dashboard > div {
-  background-color: #252529;
   padding: 5px 10px;
   color: #ffffff;
   font-size: 20px;
@@ -31,6 +30,7 @@ body {
 /* START SIDEBAR */
 
 .sidebar {
+  background-color: #252529;
   grid-row-start: 1;
   grid-row-end: 31;
   grid-column-start: 1;
@@ -38,9 +38,16 @@ body {
   position: relative;
   display:flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
+.upperIcon{
+  width: 100%;
+}
+
+.lowerIcons{
+  width: 100%;
+}
 
 .profiel {
   max-height: 4em;
@@ -50,6 +57,7 @@ body {
 img.instellingen {
   height: 2em;
   transition: 0.65s transform, 0.25s fill;
+  margin-bottom: 1em;
 }
 
 img.instellingen:hover {
@@ -68,6 +76,7 @@ img.instellingen:hover {
 
 
 .buitenTemp {
+  background-color: #252529;
   grid-row-start: 4;
   grid-row-end: 8;
   grid-column-start: 2;
@@ -82,6 +91,7 @@ img.instellingen:hover {
 /* START BINNEN TEMPERATUUR */
 
 .binnenTemp {
+  background-color: #252529;
   grid-row-start: 4;
   grid-row-end: 8;
   grid-column-start: 6;
@@ -96,6 +106,7 @@ img.instellingen:hover {
 /* START TIJD */
 
 .tijd {
+  background-color: #252529;
   grid-row-start: 4;
   grid-row-end: 8;
   grid-column-start: 10;
@@ -110,6 +121,7 @@ img.instellingen:hover {
 /* START PHILIPS HUE SLIDER */
 
 .slider {
+  background-color: #252529;
   grid-row-start: 8;
   grid-row-end: 13;
   grid-column-start: 2;
@@ -124,6 +136,7 @@ img.instellingen:hover {
 /* START VAK 6 */
 
 .six {
+  background-color: #252529;
   grid-row-start: 8;
   grid-row-end: 17;
   grid-column-start: 8;
@@ -138,6 +151,7 @@ img.instellingen:hover {
 /* START LUCHTKWALITEIT */
 
 .kwaliteit {
+  background-color: #252529;
   grid-row-start: 13;
   grid-row-end: 17;
   grid-column-start: 2;
@@ -152,6 +166,7 @@ img.instellingen:hover {
 /* START SPOTIFY */
 
 .spotify {
+  background-color: #252529;
   grid-row-start: 13;
   grid-row-end: 17;
   grid-column-start: 5;
@@ -167,6 +182,7 @@ img.instellingen:hover {
 
 
 .grafiek {
+  background-color: #252529;
   grid-row-start: 17;
   grid-row-end: 29;
   grid-column-start: 2;
@@ -181,11 +197,13 @@ img.instellingen:hover {
 /* START COPYRIGHT */
 
 .copyright {
-  grid-row-start: 29;
+  /* background-color: yellow; */
+  grid-row-start: 28;
   grid-row-end: 31;
   grid-column-start: 2;
   grid-column-end: 14;
   border-radius: 0.4em;
+  margin-top: 1.2em;
 }
 
 .copyrightText{
@@ -210,6 +228,7 @@ img.instellingen:hover {
 	justify-content: space-between;
 	align-items: baseline;
 	align-content: center;
+  background-color: #1c1c1f;
 }
 
 
@@ -224,10 +243,10 @@ img.instellingen:hover {
 .toggle-btn
 {
   position: relative;
-  width: 145px;
-  height: 74px;
-  margin: 0 auto;
-  border-radius: 40px;
+  width: 72.5px;
+  height: 37px;
+  margin: 0px;
+  border-radius: 2.5em;
 }
 
 input[type="checkbox"]
@@ -257,7 +276,7 @@ input[type="checkbox"]
   overflow: hidden;
   opacity: 1;
   background-color: #17c9b7;
-  border-radius: 40px;
+  border-radius: 20px;
   transition: 0.2s ease background-color, 0.2s ease opacity;
 }
 
@@ -265,9 +284,9 @@ input[type="checkbox"]
 {
   content: '';
   position: absolute;
-  top: 8px;
-  width: 58px;
-  height: 58px;
+  top: 4px;
+  width: 29px;
+  height: 29px;
   border-radius: 50%;
   transition: 0.5s ease transform, 0.2s ease background-color;
 }
@@ -275,20 +294,20 @@ input[type="checkbox"]
 #_1st-toggle-btn span:before
 {
   background-color: #17c9b7;
-  transform: translate(-58px,0px);
+  transform: translate(-29px,0px);
   z-index: 1;
 }
 
 #_1st-toggle-btn span:after
 {
   background-color:#fff;
-  transform: translate(8px,0px);
+  transform: translate(4px,0px);
   z-index: 0;
 }
 
 #_1st-toggle-btn input[type="checkbox"]:checked + span
 {
-  background-color: #000;
+  background-color: #252529;
 }
 
 #_1st-toggle-btn input[type="checkbox"]:active + span
@@ -298,14 +317,14 @@ input[type="checkbox"]
 
 #_1st-toggle-btn input[type="checkbox"]:checked + span:before
 {
-  background-color: #000;
-  transform: translate(56px,-19px);
+  background-color: #252529;
+  transform: translate(28px,-9.5px);
 }
 
 #_1st-toggle-btn input[type="checkbox"]:checked + span:after
 {
   background-color: #17c9b7;
-  transform: translate(79px,0px);
+  transform: translate(39.5px,0px);
 }
 
 /* First toggle btn completed */
